--- a/Day12[ArrayPart2]/index.html
+++ b/Day12[ArrayPart2]/index.html
@@ -6,7 +6,7 @@
     <title>Array Practice</title>
 </head>
 <body>
-    <p>More about array</p>
+    <p>More about array methods</p>
     <script src="./script.js"></script>
 </body>
 </html>
