more changes added

--- a/Day13[ObjectProperties]/index.html
+++ b/Day13[ObjectProperties]/index.html
@@ -11,25 +11,27 @@
              flex-direction: column;
              align-items: center;
         }
+        .context{
+            width: 40%;
+             display: flex;
+             flex-direction: column;
+             align-items: center;
+        }
         h1{
-               color: white;
+               color: rgb(177, 176, 176);
                font-size: 5rem;
         }
-        .btn{
-            padding: 1rem 2rem;
-            background-color: rgba(4, 4, 30, 0.875);
-            color: white;
-            border-radius: 9rem;
-            border: none;
-        }
-        .btn:hover{
-             background-color: rgba(5, 5, 68, 0.784);
-        }
+       p{
+         
+          color: rgb(154, 156, 156);
+       }
     </style>
 </head>
 <body>
-    <h1>Hello JS</h1>
-    <button class="btn">Click Me</button>
+    <div class="context">
+        <h1>Hello JS</h1>
+       <marquee ><p>Todoy We learn about Object Properties</p></marquee>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
