--- a/Day13[ObjectProperties]/index.html
+++ b/Day13[ObjectProperties]/index.html
@@ -1,37 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LearnJS</title>
     <style>
-        body{
+        body {
             background-color: rgba(1, 37, 42, 0.729);
-             display: flex;
-             flex-direction: column;
-             align-items: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
-        .context{
+
+        .context {
             width: 40%;
-             display: flex;
-             flex-direction: column;
-             align-items: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
-        h1{
-               color: rgb(177, 176, 176);
-               font-size: 5rem;
+
+        h1 {
+            color: rgb(177, 176, 176);
+            font-size: 5rem;
         }
-       p{
-         
-          color: rgb(154, 156, 156);
-       }
+
+        p {
+
+            color: rgb(154, 156, 156);
+        }
     </style>
 </head>
+
 <body>
     <div class="context">
         <h1>Hello JS</h1>
-       <marquee ><p>Todoy We learn about Object Properties</p></marquee>
+        <marquee>
+            <p>Todoy We learn about Object Properties</p>
+        </marquee>
     </div>
     <script src="./script.js"></script>
 </body>
+
 </html>
